// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes href down to link element 1`] = `
<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "fontFamily",
      "fontSize",
      "fontWeight",
      "lineHeight",
      "textAlign",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-h52cas"
  color="blue.5"
  href="https://github.com"
/>
`;

exports[`Link renders without any props 1`] = `
<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "fontFamily",
      "fontSize",
      "fontWeight",
      "lineHeight",
      "textAlign",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-h52cas"
  color="blue.5"
/>
`;

exports[`Link respects hoverColor prop 1`] = `
<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "fontFamily",
      "fontSize",
      "fontWeight",
      "lineHeight",
      "textAlign",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-1g2mdc3"
  color="blue.5"
  hoverColor="blue.4"
/>
`;
